--- a/.github/workflows/vue-front-build-push.yaml
+++ b/.github/workflows/vue-front-build-push.yaml
@@ -7,20 +7,16 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+# 3. source checkout
     steps:
       - name: Source Checkout
         uses: actions/checkout@v2
-      - name: SetUp JDK 17
-        uses: actions/setup-java@v2
-        with:
-          java-version: "17"
-          distribution: "adopt"
-# 2. Jobs - runner 
-
-# 3. source checkout
-
 # 4. setup node
- 
+      - name: Node.js 설치
+      uses: actions/setup-node@v2  # Node.js 설정 액션 사용
+      with:
+        node-version: 'latest'  # 사용할 Node.js 버전 지정
 # 5. docker build
 
 # 6. docker login
