--- a/.github/workflows/vue-front-build-push.yaml
+++ b/.github/workflows/vue-front-build-push.yaml
@@ -17,10 +17,9 @@ jobs:
       uses: actions/setup-node@v2  # Node.js 설정 액션 사용
       with:
         node-version: '20.12.1'  # 사용할 Node.js 버전 지정
-      run: npm install
-      run: npm run build
 # 5. docker build
-      
+    - name: Docker buildx
+      uses: docker/setup-buildx-action@v2
 # 6. docker login
 
 # 7. docker build and push
