--- a/.github/workflows/vue-front-build-push.yaml
+++ b/.github/workflows/vue-front-build-push.yaml
@@ -21,7 +21,11 @@ jobs:
     - name: Docker buildx
       uses: docker/setup-buildx-action@v2
 # 6. docker login
-
+    - name: Docker Login
+      uses: docker/login-action@v2
+      with:
+        username: ${{secrets.DOCKERHUB_USERNAME}}
+        password: ${{secrets.DOCKERHUB_TOKEN}}
 # 7. docker build and push
 
 # 파이프라인 작성이 끝나면 로컬 콘솔에서 이미지 빌드 , 실행
